[package]
name = "rust-sdk"
version = "0.2.0"
edition = "2021"
description = "cp-amm sdk"

[dependencies]
anyhow = "1.0.71"
cp-amm = { path = "../programs/cp-amm", features=["no-entrypoint", "no-custom-entrypoint"] }
ruint = "1.3.0"

[dev-dependencies]
bytemuck = { workspace = true}
proptest = { workspace = true}